--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.25",
     "@sveltejs/kit": "next",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
@@ -21,6 +22,9 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "bulma": "^0.9.3",
+    "cookie": "^0.4.1",
+    "rollup-plugin-postcss": "^4.0.0",
+    "svelma": "^0.4.5"
   }
 }
